# rpaas-ext-sample

./: .gitignore  Cargo.toml  README.md  ResourceCreationValidatePayload.json
examples/testhost/: InvalidResourceCreationValidationRequest.json  Program.cs  ValidResourceCreationValidateRequest.json  rpaas-ext-sample.wat  testhost.csproj
examples/testhost/wasi.experimental.http/: Exceptions.cs  HttpRequestHandler.cs  Response.cs
rpaas/: Cargo.toml
rpaas/src/: lib.rs
src/: main.rs
src/rpaas/: lib.rs
